# BalanceHub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-template.rgba
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs  models.rs  network.rs  state.rs  storage.rs  tray.rs  util.rs
src-tauri/src/adapters/: mod.rs  newapi.rs
src-tauri/src/models/: app_settings.rs  enums.rs  liveness.rs  provider.rs  provider_domain.rs  provider_results.rs  workspace.rs
src-tauri/src/models/provider/: defaults.rs  input.rs  normalize.rs  state.rs
src-tauri/src/models/provider_domain/: auth.rs  automation.rs  capabilities.rs  liveness.rs
src-tauri/src/providers/: anyrouter.rs  mod.rs  newapi.rs  newapi_account.rs  newapi_checkin.rs  newapi_credentials.rs  newapi_http.rs  newapi_keys.rs  newapi_logs.rs  newapi_quota.rs  newapi_response.rs  newapi_session.rs  newapi_site.rs  newapi_usage.rs
src-tauri/src/providers/newapi_checkin/: records.rs
src-tauri/src/providers/newapi_quota/: connection.rs
src-tauri/src/services/: cli_runtime.rs  liveness.rs  mod.rs  notifications.rs  provider_service.rs  scheduler.rs  temporary_cli.rs  workspaces.rs
src-tauri/src/services/liveness/: cli.rs  command.rs  http.rs  output.rs  process.rs  prompt.rs
src-tauri/src/services/notifications/: adapters.rs
(+153 files in other folders)
