[package]
name = "balancehub"
version = "0.3.5"
description = "用于集中管理 AI 中转站账号的跨平台桌面应用。"
authors = ["NotoChen <46807914+NotoChen@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/NotoChen/BalanceHub"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "balancehub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "system-proxy"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.20"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["time", "sync"] }

[target.'cfg(unix)'.dependencies]
# 仅用于测活超时后按进程组杀灭子进程树（libc::kill 负 pid）。
libc = "0.2"
